trying to fix scrollbar bug

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -871,6 +871,7 @@ picture {
 }
 
 .products-item {
+  overflow: hidden;
   display: block;
   color: #fff;
   font-family: "Georgia", serif;
